<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nev_cart"
            android:icon="@drawable/ic_cart"
            android:title="View Cart" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

    <item android:title="Order Details">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_order_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/order_history"
                    />

            </group>

        </menu>

    </item>

    <item android:title="Support">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback" />

                <item
                    android:id="@+id/nav_terms"
                    android:icon="@drawable/ic_terms_condition"
                    android:title="@string/terms_condition"
                    />l

                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_contact_us"
                    android:title="@string/contact_us"
                    />l

            </group>

        </menu>

    </item>

</menu>